import { shallowMount } from '@vue/test-utils'
import { vi } from 'vitest'
import as_figure from '@/components/posters/as-figure'

// Mock poster data instead of using non-existent get_item
const poster = {
  id: '/+14151234356/posters/1737178477987',
  type: 'poster',
  content: '<svg><rect width="100" height="100"/></svg>'
}
describe('@/component/posters/as-figure.vue', () => {
  let wrapper
  beforeEach(() => {
    wrapper = shallowMount(as_figure, { props: { itemid: poster.id } })
  })
  describe('Renders', () => {
    it('A poster', () => {
      expect(wrapper.element).toMatchSnapshot()
    })
    it('A new poster', async () => {
      await wrapper.setProps({ new_poster: poster })
      expect(wrapper.element).toMatchSnapshot()
    })
  })
  describe('Computed', () => {
    describe('.landscape', () => {
      it('Returns landscape orientation', () => {
        expect(wrapper.vm.landscape).toBeDefined()
      })
    })
  })
  describe('Watchers', () => {
    describe('menu', () => {
      it('Can be toggled', () => {
        expect(wrapper.vm.menu).toBe(false)
        wrapper.vm.menu = true
        expect(wrapper.vm.menu).toBe(true)
      })
    })
  })
  describe('Methods', () => {
    describe('#vector_click', () => {
      it('Toggles the menu when clicked', () => {
        const initial_menu = wrapper.vm.menu
        wrapper.vm.vector_click()
        expect(wrapper.vm.menu).toBe(!initial_menu)
      })
    })
  })
})
